--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,22 @@ charset-normalizer==3.4.0
 click==8.1.7
 Flask==3.1.0
 folium==0.18.0
+geopandas==1.0.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+networkx==3.4.2
 numpy==2.1.3
+osmnx==2.0.0
+packaging==24.2
 pandas==2.2.3
+pyogrio==0.10.0
+pyproj==3.7.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
+shapely==2.0.6
 six==1.16.0
 tzdata==2024.2
 urllib3==2.2.3
