--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ charset-normalizer==3.4.0
 click==8.1.7
 Flask==3.1.0
 folium==0.18.0
+geographiclib==2.0
 geopandas==1.0.1
+geopy==2.4.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
